sea-query-derive/tests/compile-fail/wrong_literal_type.rs
use sea_query::Iden;

#[derive(Iden)]
enum User {
    Table,
    #[iden = 123]
    Id,
    FirstName,
    LastName,
    Email,
}

fn main() {}
