sea-query-derive/tests/compile-fail/wrong_literal_type.stderr
error: Must be a string literal
 --> $DIR/wrong_literal_type.rs:6:14
  |
6 |     #[iden = 123]
  |              ^^^
